added user and admin homepage queries
queries that should return information now return json strings